# DS_LIBRARY-VIVEK-Batch2

./: CMakeLists.txt
docs/: build_log.md  design_proposal.md
docs/Design_Proposal/: Hash_map_design_proposal.md  Redis_Lite_Design_Proposal.md
docs/build_logs/: 10_july_2026_logs.md  13_july_2026_logs.md  14_july_2026.md  15_july_2026_logs.md  16_July_2026.md  7_july_2026_logs.md  8_july_2026_logs.md  9_july_2026_logs.md  LinkedList_build_log.md
docs/design_journal/: 10_july_2026_jounal.md  13_july_2026_jounal.md  14_july_2026_jounral.md  15_july_2026_journal.md  16_july_2026_journal.md  7_july_2026_journal.md  8_july_2026_journal.md  9_july_2026_journal.md
include/: DynamicArray.h  HashMap.h  LinkedList.h  Queue.h  RedisLite.h
src/DynamicArray/: DynamicArray.tpp
src/HashMap/: HashMap.tpp
src/LinkedList/: LinkedList.tpp
src/Queue/: Queue.tpp
src/RedisLite/: Main.cpp  RedisLite.cpp
temp/Linked_List/docs/: design_proposal.md
tests/DynamicArray/: AppendTests.cpp  Capacity_Tests.cpp  Clear_Tests.cpp  ConstructorTests.cpp  CopyAssignmentTests.cpp  CopyConstructor.cpp  Operator_Brackets_Tests.cpp  PopTests.cpp  Pop_At_IndexTests.cpp  Remove_Value_Tests.cpp  Size_Tests.cpp
tests/HashMap/: AssignmentTests.cpp  ClearTests.cpp  ConstructorTests.cpp  ContainsTests.cpp  CopyConstructorTests.cpp  EmptyTests.cpp  GetTests.cpp  PutTests.cpp  RemoveTests.cpp  SizeTests.cpp
tests/LinkedList/: ClearTests.cpp  Constructor_Tests.cpp  CopyAssignmentTests.cpp  CopyConstructorTests.cpp  DeleteFrontTests.cpp  Empty_Tests.cpp  FindTests.cpp  ForEachTests.cpp  InsertBackTests.cpp  InsertFrontTests.cpp  RemoveTests.cpp  SearchTests.cpp  SizeTests.cpp
tests/RedisLite/: ClearTests.cpp  ConstructorTests.cpp  CountTests.cpp  DelTests.cpp  ExistsTests.cpp  GetTests.cpp  KeysTests.cpp  RunTests.cpp  SetTests.cpp
